@@ -26,10 +26,10 @@ const config = {
         ['%B', (d) => d.getMonth()],
         ['%Y', () => true],
     ],
-    eventHover: null,
-    eventZoom: null,
-    eventClick: null,
     mouseout: () => {},
+    mouseover: () => {},
+    zoomend: () => {},
+    click: () => {},
     hasDelimiter: true,
     date: d => d,
     hasTopAxis: true,
