@@ -20,13 +20,8 @@ export default (svg, scales, configuration) => function dropsSelector(data) {
             .attr('cy', configuration.lineHeight / 2)
             .attr('fill', configuration.eventColor);
 
-        if (configuration.eventClick) {
-            circle.on('click', configuration.eventClick);
-        }
-
-        if (configuration.eventHover) {
-            circle.on('mouseover', configuration.eventHover);
-        }
+        circle.on('click', configuration.click);
+        circle.on('mouseover', configuration.mouseover);
 
         circle.on('mouseout', configuration.mouseout);
 
@@ -34,9 +29,8 @@ export default (svg, scales, configuration) => function dropsSelector(data) {
         drops.exit()
             .on('click', null)
             .on('mouseout', null)
-            .on('mouseover', null);
-
-        drops.exit().remove();
+            .on('mouseover', null)
+            .remove();
     });
 
     dropLines.exit().remove();
