@@ -9,9 +9,7 @@ export default (container, dimensions, scales, configuration, data, callback) =>
             requestAnimationFrame(() => callback(data));
         });
 
-    if (configuration.eventZoom) {
-        zoom.on('zoomend', configuration.eventZoom);
-    }
+    zoom.on('zoomend', configuration.zoomend);
 
     return container.call(zoom);
 };
